--- a/.classpath
+++ b/.classpath
@@ -1,99 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="Facu/src/main/java"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/bin/bootstrap.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/bin/commons-daemon.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/bin/tomcat-juli.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/endorsed/annotation-api.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/endorsed/jaxb-api.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/bval-core-0.5.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/bval-jsr303-0.5.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/catalina-ant.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/catalina-ha.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/catalina-tribes.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/catalina.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/commons-beanutils-core-1.8.3.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/commons-cli-1.2.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/commons-dbcp-1.4.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/commons-digester-1.8.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/commons-lang-2.6.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/commons-lang3-3.3.2.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/commons-pool-1.5.7.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/ecj-4.4.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/el-api.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/FastInfoset-1.2.12.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/geronimo-javamail_1.4_mail-1.8.3.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/geronimo-transaction-3.1.1.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/howl-1.0.1-1.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/hsqldb-2.3.2.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/istack-commons-runtime-2.16.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/jansi-1.8.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/jasper-el.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/jasper.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/javaee-api-6.0-6-tomcat.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/jaxb-core-2.2.7.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/jaxb-impl.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/mbean-annotation-api-4.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/myfaces-api-2.1.15.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/myfaces-impl-2.1.15.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openejb-api-4.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openejb-client-4.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openejb-core-4.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openejb-ejbd-4.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openejb-hsql-4.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openejb-http-4.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openejb-javaagent.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openejb-jee-4.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openejb-jee-accessors-4.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openejb-jpa-integration-4.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openejb-jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openejb-loader-4.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openejb-server-4.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openjpa-2.4.0-nonfinal-1598334.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openwebbeans-ee-1.2.6.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openwebbeans-ee-common-1.2.6.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openwebbeans-ejb-1.2.6.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openwebbeans-el22-1.2.6.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openwebbeans-impl-1.2.6.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openwebbeans-jsf-1.2.6.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openwebbeans-spi-1.2.6.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/openwebbeans-web-1.2.6.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/quartz-openejb-shade-2.2.1.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/serp-1.14.1.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/slf4j-api-1.7.7.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/slf4j-jdk14-1.7.7.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/swizzle-stream-1.6.2.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/sxc-jaxb-core-0.8.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/sxc-runtime-0.8.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomcat-api.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomcat-coyote.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomcat-dbcp.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomcat-i18n-es.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomcat-i18n-fr.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomcat-i18n-ja.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomcat-jdbc.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomcat-util.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomcat7-websocket.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomee-catalina-1.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomee-common-1.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomee-jdbc-1.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomee-loader-1.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomee-mojarra-1.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomee-myfaces-1.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/tomee-webapp-1.7.0.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/websocket-api.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/xbean-asm5-shaded-3.18.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/xbean-bundleutils-3.18.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/xbean-finder-shaded-3.18.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/xbean-naming-3.18.jar"/>
-	<classpathentry kind="lib" path="Facu/target/apache-tomee/lib/xbean-reflect-3.18.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="output" path="Facu/target/Facu/WEB-INF/classes"/>
+  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
+  <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
+  <classpathentry kind="output" path="target/classes"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/openejb/javaee-api/6.0-6/javaee-api-6.0-6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/mysql/mysql-connector-java/5.1.6/mysql-connector-java-5.1.6.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/myfaces/core/myfaces-api/2.1.15/myfaces-api-2.1.15.jar"/>
 </classpath>
